--- a/2.html
+++ b/2.html
@@ -1,24 +1,62 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
+
 <title>WEB1-CSS</title>
 
 <meta charset="utf-8">
+
+<style>
+
+body{margin: 0px;}
+
+a{color:black;  text-decoration:none;}
+
+h1{font-size: 45px; text-align: center;border-bottom: 1px solid gray; margin: 0px; padding: 20px;}
+
+ol{border-right: 1px solid gray; width: 100px; margin: 0; padding: 20px;}
+
+#grid {display: grid;
+       grid-template-columns: 150px 1fr;}
+
+#article{padding-left: 25px;}
+
+@media (min-width:800px) {
+        #grid {display:block;  }
+        #grid ol{border-right:none; }
+         h1{border-bottom: none;  }
+       }
+
+</style>
+
 </head>
+
 <body>
+
 <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
 
-  <li><a href="2.html">CSS</a></li>
+<div id="grid">
+  <ol>
+    <li><a href="1.html">HTML</a></li>
 
-  <li><a href="3.html">JavaScript</a><br></li>
+    <li><a href="2.html">CSS</a></li>
 
-</ol>
-<h2>CSS란 무엇인가?</h2>
+    <li><a href="2.html">JavaScript</a></li>
+
+  </ol>
+
+<div id="article">
+
+  <h2>CSS란 무엇인가?</h2>
+
 <p><a href="https://ko.wikipedia.org/wiki/W3C" target="_blank" title="HTMLS">
   Hypertext Markup Language(HTML)</a>
   is the standard markup language for <strong>creathing
-<u>web</u> pages</strong>
+
+<u>web</u> pages</strong></p>
+
+</div>
+</div>
 </body>
 </html>
